--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "AnhNLV_4.health-declaration-app-assignment-trainee",
+  "homepage": "http://{username}.github.io/User-albums",
+  "name": "User-albums",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -24,6 +27,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
